Source/Alternet.UI.Pal/Api/DateTimePicker.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2024 AlterNET Software.</auto-generated>

#pragma once

#include "DateTimePicker.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API DateTimePicker* DateTimePicker_Create_()
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<DateTimePicker*>([&](){
    #endif
        return new DateTimePicker();
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API c_bool DateTimePicker_GetHasBorder_(DateTimePicker* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetHasBorder();
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void DateTimePicker_SetHasBorder_(DateTimePicker* obj, c_bool value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetHasBorder(value);
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API DateTime_C DateTimePicker_GetValue_(DateTimePicker* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<DateTime_C>([&](){
    #endif
        return obj->GetValue();
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void DateTimePicker_SetValue_(DateTimePicker* obj, DateTime value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetValue(value);
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API DateTime_C DateTimePicker_GetMinValue_(DateTimePicker* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<DateTime_C>([&](){
    #endif
        return obj->GetMinValue();
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void DateTimePicker_SetMinValue_(DateTimePicker* obj, DateTime value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetMinValue(value);
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API DateTime_C DateTimePicker_GetMaxValue_(DateTimePicker* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<DateTime_C>([&](){
    #endif
        return obj->GetMaxValue();
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void DateTimePicker_SetMaxValue_(DateTimePicker* obj, DateTime value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetMaxValue(value);
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API int DateTimePicker_GetValueKind_(DateTimePicker* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetValueKind();
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void DateTimePicker_SetValueKind_(DateTimePicker* obj, int value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetValueKind(value);
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API int DateTimePicker_GetPopupKind_(DateTimePicker* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetPopupKind();
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void DateTimePicker_SetPopupKind_(DateTimePicker* obj, int value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetPopupKind(value);
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void DateTimePicker_SetRange_(DateTimePicker* obj, c_bool useMinValue, c_bool useMaxValue)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetRange(useMinValue, useMaxValue);
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void DateTimePicker_SetEventCallback_(DateTimePicker::DateTimePickerEventCallbackType callback)
{
    DateTimePicker::SetEventCallback(callback);
}